--- a/config.yml
+++ b/config.yml
@@ -1,10 +1,13 @@
 name: 商品レビュープラグイン
 code: ProductReview
 version: 1.0.1
+# 不要
 service:
     - ProductReviewServiceProvider
+# 不要、エンティティをロードする仕組みは別途必要
 orm.path:
     - /Resource/doctrine
+# 不要
 event: Event
 const:
     review_regist_min: 1
